--- a/.github/md5.yml
+++ b/.github/md5.yml
@@ -1670,6 +1670,10 @@ Sex_Partnership_and_Self-Efficacy_Influence_Depression_in__Chinese_Transgender_W
   name: Sex_Partnership_and_Self-Efficacy_Influence_Depression_in__Chinese_Transgender_Women.pdf
   path: 学术文献/医学/Sex_Partnership_and_Self-Efficacy_Influence_Depression_in__Chinese_Transgender_Women.pdf
   md5: d5b4daae22b951a0a518ecd34aa1eac3
+Shizu's_跨性别女性HRT资料__v1.0.6_.pdf:
+  name: Shizu's_跨性别女性HRT资料__v1.0.6_.pdf
+  path: 社群及NGO文件/社群讨论/中国大陆/Shizu's_跨性别女性HRT资料__v1.0.6_.pdf
+  md5: 367d9cc76c5c18fdddc1f433d27f28af
 Suicidal_ideation_and_attempted_suicide_amongst_Chinese_.pdf:
   name: Suicidal_ideation_and_attempted_suicide_amongst_Chinese_.pdf
   path: 学术文献/人文社科/Suicidal_ideation_and_attempted_suicide_amongst_Chinese_.pdf
@@ -1822,6 +1826,10 @@ transgender_performance_in_contemporary_Chinese_films.pdf:
   name: “伪娘”亚文化现象的美学解读_高妍.pdf
   path: 学术文献/人文社科/“伪娘”亚文化现象的美学解读_高妍.pdf
   md5: 64f0b80c7e76e77bb04a304d3bd1f1bf
+“性别不一致”去精神病化的思考.pdf:
+  name: “性别不一致”去精神病化的思考.pdf
+  path: 学术文献/医学/“性别不一致”去精神病化的思考.pdf
+  md5: dd9bb9bb52197eb5785034c05adf8a45
 “灵魂”对“肉体”的背叛——变性人现象综述_祁冬涛.pdf:
   name: “灵魂”对“肉体”的背叛——变性人现象综述_祁冬涛.pdf
   path: 学术文献/人文社科/“灵魂”对“肉体”的背叛——变性人现象综述_祁冬涛.pdf
@@ -2016,8 +2024,8 @@ transgender_performance_in_contemporary_Chinese_films.pdf:
   md5: 92cfd90e74f4d6bf06ab5b92e76d6e06
 中国跨性别者非自杀倾向自残行为研究——流行率和风险因素的横断研究.pdf:
   name: 中国跨性别者非自杀倾向自残行为研究——流行率和风险因素的横断研究.pdf
-  path: 学术文献/人文社科/中国跨性别者非自杀倾向自残行为研究——流行率和风险因素的横断研究.pdf
-  md5: 0e09a29ad2070eeebbdfb2a3179c397c
+  path: 学术文献/医学/中国跨性别者非自杀倾向自残行为研究——流行率和风险因素的横断研究.pdf
+  md5: df28d0bafbcad2174a99c951dedfd330
 中国首位变性人状告医院始末_李玉林.pdf:
   name: 中国首位变性人状告医院始末_李玉林.pdf
   path: 杂志及新闻报道/中国大陆/中国首位变性人状告医院始末_李玉林.pdf
@@ -3198,6 +3206,10 @@ transgender_performance_in_contemporary_Chinese_films.pdf:
   name: 性及性身份识别障碍.pdf
   path: 学术文献/医学/性及性身份识别障碍.pdf
   md5: 402dbb6d6f8c8bfa40e3305ad7353db6
+性发育异常儿童抚养性别再认识.pdf:
+  name: 性发育异常儿童抚养性别再认识.pdf
+  path: 学术文献/医学/性发育异常儿童抚养性别再认识.pdf
+  md5: b4830cb3e04c0c71c0552d6f4d294047
 性少数人群心理实践指南.pdf:
   name: 性少数人群心理实践指南.pdf
   path: 学术文献/医学/性少数人群心理实践指南.pdf
@@ -4042,6 +4054,10 @@ transgender_performance_in_contemporary_Chinese_films.pdf:
   name: 衛生部規範變性手術_申請人須易性逾兩年_大公报.pdf
   path: 杂志及新闻报道/港澳台/衛生部規範變性手術_申請人須易性逾兩年_大公报.pdf
   md5: 472d0304cf16cef30fef5528b564a33a
+被殴打、遭虐待，曝光特训学校的暗面.pdf:
+  name: 被殴打、遭虐待，曝光特训学校的暗面.pdf
+  path: 杂志及新闻报道/中国大陆/被殴打、遭虐待，曝光特训学校的暗面.pdf
+  md5: b15a7d699886e28cc5751ea066c0d627
 西方国家变性人越来越多众法官束手无策_齐书学.pdf:
   name: 西方国家变性人越来越多众法官束手无策_齐书学.pdf
   path: 学术文献/法律/西方国家变性人越来越多众法官束手无策_齐书学.pdf
@@ -4266,6 +4282,10 @@ transgender_performance_in_contemporary_Chinese_films.pdf:
   name: 跨性别群体抑郁、焦虑与防御机制研究.pdf
   path: 学术文献/医学/跨性别群体抑郁、焦虑与防御机制研究.pdf
   md5: e25aaf68316f0304e85fde02e061e8eb
+跨性别者及其共同体的认同实践与传播符号解读_张驰.pdf:
+  name: 跨性别者及其共同体的认同实践与传播符号解读_张驰.pdf
+  path: 学术文献/人文社科/跨性别者及其共同体的认同实践与传播符号解读_张驰.pdf
+  md5: e34a17cf1225f014867152f7bd7df01a
 跨性别者性别认同的法律承认-中国相关法律和政策的评估报告-中华女子学院-UNDP.pdf:
   name: 跨性别者性别认同的法律承认-中国相关法律和政策的评估报告-中华女子学院-UNDP.pdf
   path: 社群及NGO文件/统计报告/跨性别者性别认同的法律承认-中国相关法律和政策的评估报告-中华女子学院-UNDP.pdf
@@ -4474,6 +4494,10 @@ transgender_performance_in_contemporary_Chinese_films.pdf:
   name: 雌二醇凝胶自制方法.md
   path: 社群及NGO文件/手册指南/雌二醇凝胶自制方法/雌二醇凝胶自制方法.md
   md5: 8924c20ba078bddef3eb25d3756166e3
+雌二醇成膜凝胶的制备及其药代动力学的初步研究_潘悦.pdf:
+  name: 雌二醇成膜凝胶的制备及其药代动力学的初步研究_潘悦.pdf
+  path: 学术文献/医学/雌二醇成膜凝胶的制备及其药代动力学的初步研究_潘悦.pdf
+  md5: b5d73726d78a925501a9026a67cc3f54
 雌性与草药治疗_林从欣_Patrick_动态研究.pdf:
   name: 雌性与草药治疗_林从欣_Patrick_动态研究.pdf
   path: 学术文献/医学/雌性与草药治疗_林从欣_Patrick_动态研究.pdf
