--- a/学术文献/医学/config.yml
+++ b/学术文献/医学/config.yml
@@ -427,6 +427,7 @@ files:
   format: PDF Document
   size: 544975
   md5: dd9bb9bb52197eb5785034c05adf8a45
+  page: “性别不一致”去精神病化的思考_page.md
 - name: 两性畸形的超声特征_-_中国医学影像技术
   filename: 两性畸形的超声特征_-_中国医学影像技术.pdf
   type: document
@@ -454,6 +455,7 @@ files:
   format: PDF Document
   size: 523213
   md5: df28d0bafbcad2174a99c951dedfd330
+  page: 中国跨性别者非自杀倾向自残行为研究——流行率和风险因素的横断研究_page.md
 - name: 亚洲男性学杂志_2013年15卷2期_精子质量与男性生殖健康研究文献汇总
   filename: 亚洲男性学杂志_2013年15卷2期_精子质量与男性生殖健康研究文献汇总.pdf
   type: document
@@ -712,6 +714,7 @@ files:
   format: PDF Document
   size: 1163259
   md5: b4830cb3e04c0c71c0552d6f4d294047
+  page: 性发育异常儿童抚养性别再认识_page.md
 - name: 性少数人群心理实践指南
   filename: 性少数人群心理实践指南.pdf
   type: document
@@ -1019,6 +1022,7 @@ files:
   format: PDF Document
   size: 3417865
   md5: b5d73726d78a925501a9026a67cc3f54
+  page: 雌二醇成膜凝胶的制备及其药代动力学的初步研究_潘悦_page.md
 - name: 雌性与草药治疗_林从欣_Patrick_动态研究
   filename: 雌性与草药治疗_林从欣_Patrick_动态研究.pdf
   type: document
