--- a/杂志及新闻报道/中国大陆/config.yml
+++ b/杂志及新闻报道/中国大陆/config.yml
@@ -261,6 +261,7 @@ files:
   format: PDF Document
   size: 24598590
   md5: b15a7d699886e28cc5751ea066c0d627
+  page: 被殴打、遭虐待，曝光特训学校的暗面_page.md
 - name: 西方的变性热_王克强
   filename: 西方的变性热_王克强.pdf
   type: document
