--- a/社群及NGO文件/社群讨论/中国大陆/config.yml
+++ b/社群及NGO文件/社群讨论/中国大陆/config.yml
@@ -18,6 +18,13 @@ files:
   size: 123399
   md5: 4cdb65d30c36ecc8d3a3a9b7624fa6ae
   page: 2017秋季泰国法政大学交流心得_page.md
+- name: Shizu's_跨性别女性HRT资料__v1.0.6_
+  filename: Shizu's_跨性别女性HRT资料__v1.0.6_.pdf
+  type: document
+  format: PDF Document
+  size: 3131629
+  md5: 367d9cc76c5c18fdddc1f433d27f28af
+  page: Shizu's_跨性别女性HRT资料__v1.0.6__page.md
 - name: TERF问答
   filename: TERF问答.docx
   type: document
