--- a/.github/md5.yml
+++ b/.github/md5.yml
@@ -3306,6 +3306,10 @@ transgender_performance_in_contemporary_Chinese_films.pdf:
   name: 我骄傲我奉献真色彩_麦肯锡.pdf
   path: 社群及NGO文件/其他组织文件/我骄傲我奉献真色彩_麦肯锡.pdf
   md5: 7c786689aac42bfe912165d5491556bd
+戒网瘾学校关联机构名单.docx:
+  name: 戒网瘾学校关联机构名单.docx
+  path: 社群及NGO文件/其他组织文件/戒网瘾学校关联机构名单.docx
+  md5: cc84a2b79cc32f425bbe0a0d07783168
 户籍管理领域基层政务公开标准目录.pdf:
   name: 户籍管理领域基层政务公开标准目录.pdf
   path: 政府及官方组织文件/中国大陆/其他文件/户籍管理领域基层政务公开标准目录.pdf
